--- a/src/app/pages/create-work-sheet/create-work-sheet.component.html
+++ b/src/app/pages/create-work-sheet/create-work-sheet.component.html
@@ -7,7 +7,7 @@
     </form>
     <div [ngSwitch]="type">
         <div *ngSwitchCase="'vinyl'">
-            Vinyl
+            Vinyl2
         </div>
         <div *ngSwitchCase="'sticker'">
             Sticker
