--- a/src/app/pages/create-work-sheet/create-work-sheet.component.html
+++ b/src/app/pages/create-work-sheet/create-work-sheet.component.html
@@ -1,10 +1,10 @@
 <ion-content class="ion-padding">
     <div>ใบสั่งงาน</div>
+    <div (click)="close()" class="px-2 py-1 bg-red-500 rounded-full text-white">ปิด</div>
     <ion-button expand="block" (click)="create()">สร้างใบงาน</ion-button>
     <form [formGroup]="form">
-        <!-- <app-select [parentForm]="form" label="ประเภทงาน" formControlName="types" placeholder="กรุณาเลือกประเภทงาน"
-            [multiple]="false" [options]="types" (selectChange)="segmentChanged($event)"></app-select> -->
-
+        <app-select [parentForm]="form" label="ด่วน" formControlName="is_urgent" placeholder="กรุณาเลือก"
+            [multiple]="false" [options]="is_ergents"></app-select>
         <!-- เลขที่อ้างอิง -->
         <app-input [parentForm]="form" label="เลขที่อ้างอิง" typeInput="text" formControlName="reference"
             placeholder="กรุณากรอกเลขที่อ้างอิง"></app-input>
