--- a/src/app/pages/setting/job/job.component.html
+++ b/src/app/pages/setting/job/job.component.html
@@ -5,48 +5,47 @@
 </div>
 <ngx-datatable class="flex w-full. material expandable" [columnMode]="'force'" [rows]="results" [limit]="10"
   rowHeight="auto" [headerHeight]="50" [footerHeight]="50" [scrollbarH]="true" (activate)="onActivate($event)"
-  [sorts]="[{prop: 'status', dir: 'asc'}]" *ngIf="data.length > 0">
+  [sorts]="[{prop: 'serial_number', dir: 'asc'}]" *ngIf="data.length > 0">
   <ngx-datatable-column name="Status" prop="status">
     <ng-template let-row="row" ngx-datatable-cell-template>
-      <div class="w-full h-full text-white text-center rounded-md "
-        [ngClass]="{'bg-red-400':row.status == 'BOOKED','bg-gray-400':row.status == 'PENDING','bg-green-400' :row.status == 'COMPLETED','bg-black':row.status == 'CANCELED' || row.status == 'REJECTED'}">
-        {{row.status}}
-      </div>
+      {{row.status}}
+      <!-- <div class="w-full h-full text-white text-center rounded-md ">
+      </div> -->
     </ng-template>
   </ngx-datatable-column>
-  <!-- <ngx-datatable-column name="Job ID" prop="job_id">
+  <ngx-datatable-column name="Serial Number" prop="serial_number">
     <ng-template let-row="row" ngx-datatable-cell-template>
-      {{row.job_id}}
-    </ng-template>
-  </ngx-datatable-column> -->
-  <ngx-datatable-column name="เบอร์มือถือ" prop="phone">
-    <ng-template let-row="row" ngx-datatable-cell-template>
-      {{row.phone}}
+      {{row.serial_number ||''}}
     </ng-template>
   </ngx-datatable-column>
-  <ngx-datatable-column name="ชื่อห้อง" prop="address">
+  <!-- customer_name -->
+  <!-- seller_name -->
+  <!-- design_by -->
+  <!-- date_of_acceptance -->
+  <!-- data_of_submission -->
+  <ngx-datatable-column name="ชื่อลูกค้า" prop="customer_name">
     <ng-template let-row="row" ngx-datatable-cell-template>
-      {{row.address}}
+      {{row.customer_name ||''}}
     </ng-template>
   </ngx-datatable-column>
-  <!-- <ngx-datatable-column name="รหัสสถานที่" prop="site_id">
+  <ngx-datatable-column name="ชื่อผู้ขาย" prop="seller_name">
     <ng-template let-row="row" ngx-datatable-cell-template>
-      {{row.site_id}}
-    </ng-template>
-  </ngx-datatable-column> -->
-  <ngx-datatable-column name="เพิ่มโดย" prop="created_by">
-    <ng-template let-row="row" ngx-datatable-cell-template>
-      {{row.created_by || '-'}}
+      {{row.seller_name ||''}}
     </ng-template>
   </ngx-datatable-column>
-  <ngx-datatable-column name="วันที่" prop="book.date">
+  <ngx-datatable-column name="ผู้ออกแบบ" prop="design_by">
     <ng-template let-row="row" ngx-datatable-cell-template>
-      {{formatTime(row.book.date)}}
+      {{row.design_by ||''}}
     </ng-template>
   </ngx-datatable-column>
-  <ngx-datatable-column name="จำนวน" prop="book.time">
+  <ngx-datatable-column name="วันที่รับแบบ" prop="date_of_acceptance">
     <ng-template let-row="row" ngx-datatable-cell-template>
-      {{row.qty || 1}}
+      {{row.date_of_acceptance ? formatTime(row.date_of_acceptance) : ''}}
+    </ng-template>
+  </ngx-datatable-column>
+  <ngx-datatable-column name="วันที่ส่งแบบ" prop="data_of_submission">
+    <ng-template let-row="row" ngx-datatable-cell-template>
+      {{row.data_of_submission ? formatTime(row.data_of_submission) : ''}}
     </ng-template>
   </ngx-datatable-column>
   <ngx-datatable-column name="ACTION">
