--- a/src/app/components/layouts/main-layout/main-layout.component.html
+++ b/src/app/components/layouts/main-layout/main-layout.component.html
@@ -2,7 +2,7 @@
   <ion-menu contentId="main-content" type="overlay">
     <ion-content>
       <ion-list id="inbox-list">
-        <ion-list-header>Krungthon</ion-list-header>
+        <ion-list-header>Naikit Sticker</ion-list-header>
         <!-- <ion-note>hi&#64;ionicframework.com</ion-note> -->
 
         <ion-menu-toggle auto-hide="false" *ngFor="let p of appPages; let i = index">
