--- a/src/app/pages/create-work-sheet/create-work-sheet.component.html
+++ b/src/app/pages/create-work-sheet/create-work-sheet.component.html
@@ -22,11 +22,11 @@
         <app-select [parentForm]="form" label="ผู้ขาย" formControlName="seller" placeholder="กรุณาเลือกผู้ขาย"
             [multiple]="false" [options]="sellers"></app-select>
         <!-- ยอดรวม -->
-        <!-- <app-input [parentForm]="form" label="ยอดรวม" typeInput="text" formControlName="total"
-            placeholder="กรุณากรอกยอดรวม"></app-input> -->
+        <app-input [parentForm]="form" label="ยอดรวม" typeInput="text" formControlName="total"
+            placeholder="กรุณากรอกยอดรวม"></app-input>
         <!-- เงินมัดจำ -->
-        <!-- <app-input [parentForm]="form" label="เงินมัดจำ" typeInput="text" formControlName="deposit"
-            placeholder="กรุณากรอกเงินมัดจำ"></app-input> -->
+        <app-input [parentForm]="form" label="เงินมัดจำ" typeInput="text" formControlName="deposit"
+            placeholder="กรุณากรอกเงินมัดจำ"></app-input>
         <!-- payment -->
         <!-- <app-select [parentForm]="form" label="การชําระเงิน" formControlName="payment"
             placeholder="กรุณาเลือกการชําระเงิน" [multiple]="false" [options]="payments"></app-select> -->
